kubernetes/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: tv
          mountPath: /tv
        - name: anime
          mountPath: /anime
      volumes:
      - name: config
        hostPath:
          path: /var/lib/k8s/bazarr
      - name: movies
        hostPath:
          path: /media/movies
      - name: tv
        hostPath:
          path: /media/tv
      - name: anime
        hostPath:
          path: /media/anime
